Rename project from AstroFlow to OTUTU and update related references in documentation and codebase

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astroflow",
+  "name": "OTUTU",
   "type": "module",
   "version": "0.0.1",
   "description": "Modern Astro.js template for logistics and manufacturing companies",
